# website

./: alembic.ini  database.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_10_02_1530_default.py  2023_10_02_1540_default2.py  2023_10_02_1543_default3.py  2023_10_02_1544_create_db.py  2023_10_02_1549_updade.py  2023_10_04_1433_testmigrate.py  2023_10_08_2245_delete_test.py
frontend/: index.html
pages/: router.py
src/: main.py
src/auth/: hash.py
src/bases/: database.py  database.txt
src/main_routers/: admin.py  user.py
src/role/: main.py  router.py  schemas.py
src/user/: main.py  router.py  schemas.py
src/work/: main.py  router.py  schemas.py
templates/: base.html
